<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LatestManga">


    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Navigation Bar -->
    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_shadow"
        android:padding="16dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!-- Home Button -->
        <FrameLayout
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/home_button_description">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/home"
                app:tint="@android:color/black"/>

            <TextView
                android:id="@+id/home_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/tooltip_background"
                android:padding="8dp"
                android:text="@string/home"
                android:textColor="@android:color/black"
                android:visibility="gone"/>
        </FrameLayout>

        <!-- Wallpaper Button -->
        <FrameLayout
            android:id="@+id/messages_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/Wallpaper_button_description">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/wallpaper"
                app:tint="@android:color/black"/>

            <TextView
                android:id="@+id/messages_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/tooltip_background"
                android:padding="8dp"
                android:text="@string/Wallpaper"
                android:textColor="@android:color/black"
                android:visibility="gone"/>
        </FrameLayout>

        <!-- Favourite Button -->
        <FrameLayout
            android:id="@+id/user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/Favourite_button_description">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/favourite"
                app:tint="@android:color/black"/>

            <TextView
                android:id="@+id/user_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/tooltip_background"
                android:padding="8dp"
                android:text="@string/Favourite"
                android:textColor="@android:color/black"
                android:visibility="gone"/>
        </FrameLayout>

        <!-- Settings Button -->
        <FrameLayout
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/Setting_button_description">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/setting"
                app:tint="@android:color/black"/>

            <TextView
                android:id="@+id/settings_tooltip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@drawable/tooltip_background"
                android:padding="8dp"
                android:text="@string/Setting"
                android:textColor="@android:color/black"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
